istio/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: emoji-server
  labels:
    app: emoji-server
spec:
  ports:
  - name: grpc-web
    port: 9000
  selector:
    app: emoji-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emoji-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-server
  template:
    metadata:
      labels:
        app: emoji-server
    spec:
      containers:
      - name: emoji-server
        image: thejasn/grpc-web-istio-demo-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
