istio/web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: emoji-web-ui
  labels:
    app: emoji-web-ui
spec:
  ports:
  - name: http
    port: 9001
  selector:
    app: emoji-web-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emoji-web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-web-ui      
  template:
    metadata:
      labels:
        app: emoji-web-ui
    spec:
      containers:
      - name: emoji-web-ui
        image: thejasn/grpc-web-istio-demo-web-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
